production/reports_analytics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-analytics
  namespace: production
spec:
  replicas: 1   
  selector:
    matchLabels:
      app: reports-analytics
  template:
    metadata:
      labels:
        app: reports-analytics
    spec:
      imagePullSecrets:
      - name: aws-ecr-cred
      containers:
      - name: reports-analytics
        image: 024955634588.dkr.ecr.us-east-1.amazonaws.com/reports_analytics:d77fdfa8-20251214185501
        ports:
        - containerPort: 8006
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
