production/reports_analytics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reports-analytics
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: reports-analytics
  ports:
  - port: 80
    targetPort: 8006
