production/reports_analytics/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reports-analytics
  namespace: production
spec:
  hosts:
  - "*"
  gateways:
  - salon-gateway
  http:
  - match:
    - uri:
        prefix: /reports-analytics
    route:
    - destination:
        host: reports-analytics
        port:
          number: 80
